<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_nDays_label"
        android:key="@string/pref_nDays_key"
        android:defaultValue="@string/pref_nDays_default"
        android:inputType="number"
        android:singleLine="true" />

    <CheckBoxPreference
        android:title="@string/pref_enable_fullplot_label"
        android:key="@string/pref_enable_fullplot_key"
        android:summaryOff="@string/pref_enable_fullplot_false"
        android:summaryOn="@string/pref_enable_fullplot_true"
        android:defaultValue="@string/pref_enable_fullplot_default" />

</PreferenceScreen>
